fix bug, improve slider on mobile, add more documentation

--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -122,3 +122,40 @@ body {
         margin-top: 50px;
     }
 }
+
+input[type=range] {
+    -webkit-appearance: none;
+    appearance: none;
+    background: #363636;
+    border-radius: 12px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 30px;
+    height: 30px;
+    background: #48c78e;
+    cursor: pointer;
+    border-radius: 12px;
+}
+
+input[type=range]::-moz-range-thumb {
+    width: 30px;
+    height: 30px;
+    background: #48c78e;
+    cursor: pointer;
+    border-radius: 12px;
+}
+
+input[type=range]::-webkit-slider-thumb:hover {
+    background: #3ec487;
+}
+
+input[type=range]::-moz-range-thumb:hover {
+    background: #3ec487;
+}
+
+input, span {
+    vertical-align: middle;
+}
